# ADS_2024-2025

./: .gitignore  CMakeLists.txt  README.md
Contest_1/: A.py  B.py  C.cpp  CMakeLists.txt  D.py  E.py  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.py
Contest_2/: CMakeLists.txt  D.cpp  E.cpp  F.cpp  G.cpp  test.cpp
Contest_3/: A.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  F.cpp
Contest_4/: A.cpp  CMakeLists.txt
Functions/: CMakeLists.txt  Prefix-func.cpp  Z-func.cpp
Quiz_16_10_24/: 1_ex.cpp  2_ex.cpp  CMakeLists.txt
Sorts/: CMakeLists.txt  Heap_sort.cpp  Merge_sort.cpp  Radix_sort.cpp
Structures/: CMakeLists.txt  Linked_list.cpp  Tree.cpp
